--- a/apps/next/global.css
+++ b/apps/next/global.css
@@ -20,6 +20,7 @@ html, body, #__next {
     padding: 0px;
     /* Allows content to fill the viewport and go beyond the bottom */
     min-height: 100%;
+    font-family: 'SFProDisplay-Bold'
 }
 
 #__next {
@@ -46,4 +47,5 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -ms-overflow-style: scrollbar;
+    font-family: 'SFProDisplay-Bold' !important
 }
